# openage

./: .gitignore
doc/: building.md
libopenage/: CMakeLists.txt
libopenage/curve/: CMakeLists.txt  CONCEPT.md  CURVE_IDEA.md  container.cpp  container.h  container_iterator.h  curve.h  iterator.cpp  iterator.h  map.cpp  map.h  map_filter_iterator.cpp  object.h  queue.cpp  queue_filter_iterator.cpp  simple_continuous.h
libopenage/curve/internal/: CMakeLists.txt
libopenage/curve/test/: test_curve_types.cpp
libopenage/network/: CMakeLists.txt  client.cpp  client.h  handshakemanager.cpp  handshakemanager.h  network.cpp  network.h  packet.cpp  packet.h  packet_handshake.h  packetbuilder.cpp  packetbuilder.h  serializerstream.cpp  serializerstream.h  server.cpp  server.h  test.cpp  wiremanager.cpp  wiremanager.h
libopenage/renderer/font/: glyph_atlas.h
openage/testing/: main.py  testlist.py
